--- a/fun.html
+++ b/fun.html
@@ -8,8 +8,7 @@
 
   <body><center>
 
-    <svg xmlns="http://www.w3.org/2000/cvg" id="s" height="500" width="500" style="border:1px solid black">
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/cvg" id="s" height="500" width="500" style="border:1px solid black" />
 
     <br>
     <button id="circleButton">Circle </button>
